--- a/Keyhanatr/Areas/Admin/Views/Users/Create.cshtml
+++ b/Keyhanatr/Areas/Admin/Views/Users/Create.cshtml
@@ -37,7 +37,7 @@
                         </div>
                         <div class="col-sm-6">
                             <label asp-for="RegisterDate" class="form-label">تاریخ ثبت نام</label>
-                            <input asp-for="RegisterDate" type="text" class="form-control">
+                            <input asp-for="RegisterDate" type="text" class="form-control" placeholder="مثال : 1400/01/01">
                         </div>
                         <div class="col-sm-6">
                             <label asp-for="ActiveCode" class="form-label">کد فعالسازی</label>
