--- a/Keyhanatr/Areas/Admin/Views/Users/Index.cshtml
+++ b/Keyhanatr/Areas/Admin/Views/Users/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Keyhanatr.Data.Domain.User.User>
+﻿     
+@model IEnumerable<Keyhanatr.Data.Domain.User.User>
 
 @{
     ViewData["Title"] = "Index";
