--- a/Keyhanatr/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Keyhanatr/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -33,7 +33,7 @@
     <link rel="stylesheet" media="screen" href="/css/theme.min.css">
     <link href="~/css/CustomStyles.css" rel="stylesheet" />
     <!-- Google Tag Manager-->
-
+    @RenderSection("Styles", false)
 </head>
 <!-- Body-->
 <body class="handheld-toolbar-enabled">
@@ -236,6 +236,7 @@
                                 <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3" href="/Admin/ProductGroups"><i class="ci-cloud-upload opacity-60 me-2"></i>گروه ها </a></li>
                                 <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3" href="/Admin/ProductSubGroups"><i class="ci-cloud-upload opacity-60 me-2"></i>زیر گروه ها </a></li>
                                 <li class="border-bottom mb-0"><a asp-area="Admin" asp-controller="Users" asp-action="Index" class="nav-link-style d-flex align-items-center px-4 py-3"><i class="ci-cloud-upload opacity-60 me-2"></i>کاربران </a></li>
+                                <li class="border-bottom mb-0"><a asp-area="Admin" asp-controller="Sliders" asp-action="Index" class="nav-link-style d-flex align-items-center px-4 py-3"><i class="ci-cloud-upload opacity-60 me-2"></i>اسلایدر</a></li>
                                 
                                 <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3" href="dashboard-payouts.html"><i class="ci-currency-exchange opacity-60 me-2"></i>پرداخت</a></li>
                                 <li class="mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3" href="account-signin.html"><i class="ci-sign-out opacity-60 me-2"></i>خروج</a></li>
@@ -351,7 +352,6 @@
             </div>
         </div>
     </footer>
-    @RenderBody()
     <!-- Toolbar for handheld devices (Marketplace)-->
     <div class="handheld-toolbar">
         <div class="d-table table-layout-fixed w-100"><a class="d-table-cell handheld-toolbar-item" href="dashboard-favorites.html"><span class="handheld-toolbar-icon"><i class="ci-heart"></i></span><span class="handheld-toolbar-label">علاقه مندی</span></a><a class="d-table-cell handheld-toolbar-item" href="javascript:void(0)" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" onclick="window.scrollTo(0, 0)"><span class="handheld-toolbar-icon"><i class="ci-menu"></i></span><span class="handheld-toolbar-label">منو</span></a><a class="d-table-cell handheld-toolbar-item" href="marketplace-cart.html"><span class="handheld-toolbar-icon"><i class="ci-cart"></i><span class="badge bg-primary rounded-pill ms-1">3</span></span><span class="handheld-toolbar-label">5600</span></a></div>
