--- a/Keyhanatr/Areas/Admin/Views/Users/Edit.cshtml
+++ b/Keyhanatr/Areas/Admin/Views/Users/Edit.cshtml
@@ -33,7 +33,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="RegisterDate" class="control-label"></label>
-                <input asp-for="RegisterDate" class="form-control" />
+                <input asp-for="RegisterDate" class="form-control" placeholder="مثال : 1400/01/01" />
                 <span asp-validation-for="RegisterDate" class="text-danger"></span>
             </div>
             <div class="form-group">
