--- a/Keyhanatr/Views/Shared/_Navbar.cshtml
+++ b/Keyhanatr/Views/Shared/_Navbar.cshtml
@@ -34,7 +34,7 @@
                         <li><a class="dropdown-item pb-1" href="#"><img class="me-2" src="/img/flags/de.png" width="20" alt="آلمان">آلمان</a></li>
                         <li><a class="dropdown-item" href="#"><img class="me-2" src="/img/flags/it.png" width="20" alt="ایتالیا">ایتالیا</a></li>
                     </ul>
-                </div>*@
+                </div>
             </div>
         </div>
     </div>
