--- a/Keyhanatr/Areas/Admin/Views/Sliders/Create.cshtml
+++ b/Keyhanatr/Areas/Admin/Views/Sliders/Create.cshtml
@@ -26,28 +26,36 @@
                             <input asp-for="Title" class="form-control" type="text" id="dashboard-ln">
                         </div>
                         <div class="col-sm-12">
+                            <label asp-for="Titr" class="form-label">تیتر اسلاید</label>
+                            <input asp-for="Titr" class="form-control" type="text" id="dashboard-ln">
+                        </div>
+                        <div class="col-sm-12">
                             <label asp-for="Text" class="form-label">متن اسلاید</label>
                             <input asp-for="Text" class="form-control">
+                        </div>
+                        <div class="col-sm-12">
+                            <label asp-for="BackColor" class="form-label">رنگ پس زمینه</label>
+                            <input asp-for="BackColor" class="form-control">
                         </div>
                         <div class="col-sm-12 mt-5">
                             <label asp-for="ImageName" class="form-label">انتخاب تصویر</label>
                             <input asp-for="ImageName" type="file" name="imgUp" />
                         </div>
                         <!--<div class="col-sm-6">
-                            <label asp-for="StartDate" class="form-label">تاریخ شروع</label>
-                            <input type="text" name="stDate" class="form-control" DatePicker="1">
-                        </div>
-                        <div class="col-sm-6">
-                            <label asp-for="EndDate" class="form-label">تاریخ پایان</label>
-                            <input type="text" name="edDate" class="form-control" DatePicker="1">-->
-                            @*<input asp-for="EndDate" name="edDate"  class="form-control">*@
+        <label asp-for="StartDate" class="form-label">تاریخ شروع</label>
+        <input type="text" name="stDate" class="form-control" DatePicker="1">
+    </div>
+    <div class="col-sm-6">
+        <label asp-for="EndDate" class="form-label">تاریخ پایان</label>
+        <input type="text" name="edDate" class="form-control" DatePicker="1">-->
+                        @*<input asp-for="EndDate" name="edDate"  class="form-control">*@
                         <!--</div>-->
                         <div class="col-sm-6 form-check mt-5">
                             <label class="form-check-label">
                                 <input class="form-check-input" asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
                             </label>
                         </div>
-                       
+
                         <div class="col-12">
                             <hr class="mt-2 mb-4">
                             <div class="d-sm-flex justify-content-between align-items-center">
