--- a/Keyhanatr/Areas/Admin/Views/Sliders/Delete.cshtml
+++ b/Keyhanatr/Areas/Admin/Views/Sliders/Delete.cshtml
@@ -18,10 +18,22 @@
             @Html.DisplayFor(model => model.Title)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Titr)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Titr)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Text)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Text)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.BackColor)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.BackColor)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ImageName)
@@ -30,17 +42,17 @@
             @Html.DisplayFor(model => model.ImageName)
         </dd>
         @*<dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.StartDate)
-            </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.StartDate)
-            </dd>
-            <dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.EndDate)
-            </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.EndDate)
-            </dd>*@
+            @Html.DisplayNameFor(model => model.StartDate)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.StartDate)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.EndDate)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.EndDate)
+        </dd>*@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IsActive)
         </dt>
