--- a/Keyhanatr/Views/Shared/_Banner.cshtml
+++ b/Keyhanatr/Views/Shared/_Banner.cshtml
@@ -9,31 +9,31 @@
             </div>
         </div>*@
         <div class="col-md-4 mb-4">
-            <div class="d-flex flex-column h-100 justify-content-center bg-size-cover bg-position-center rounded-3" style="background-image: url(img/blog/banner-bg.jpg);">
+            <div class="d-flex flex-column h-100 justify-content-center bg-size-cover bg-position-center rounded-3" style="background-image: url(img/home/hero-slider/120.jpg);">
                 <div class="py-4 my-2 px-4 text-center">
                     <div class="py-1">
-                        <h5 class="mb-2">بنر خود را در اینجا اضافه کنید</h5>
-                        <p class="fs-sm text-muted">عجله کنید تا محل خود را رزرو کنید</p><a class="btn btn-primary btn-shadow btn-sm" href="#">تماس با ما</a>
+                        <h5 class="mb-2">محصولاتی متفاوت</h5>
+                        <p class="fs-sm text-muted">چی؟ کیهان عطر</p><a class="btn btn-primary btn-shadow btn-sm" href="#">تماس با ما</a>
                     </div>
                 </div>
             </div>
         </div>
         <div class="col-md-4 mb-4">
-            <div class="d-flex flex-column h-100 justify-content-center bg-size-cover bg-position-center rounded-3" style="background-image: url(img/blog/banner-bg.jpg);">
+            <div class="d-flex flex-column h-100 justify-content-center bg-size-cover bg-position-center rounded-3" style="background-image: url(img/home/hero-slider/100.png); ">
                 <div class="py-4 my-2 px-4 text-center">
                     <div class="py-1">
-                        <h5 class="mb-2">بنر خود را در اینجا اضافه کنید</h5>
-                        <p class="fs-sm text-muted">عجله کنید تا محل خود را رزرو کنید</p><a class="btn btn-primary btn-shadow btn-sm" href="#">تماس با ما</a>
+                        <h5 class="mb-2">کیفیتی بی نظیر</h5>
+                        <p class="fs-sm text-muted">کی؟ کیهان عطر</p><a class="btn btn-primary btn-shadow btn-sm" href="#">تماس با ما</a>
                     </div>
                 </div>
             </div>
         </div>
         <div class="col-md-4 mb-4">
-            <div class="d-flex flex-column h-100 justify-content-center bg-size-cover bg-position-center rounded-3" style="background-image: url(img/blog/banner-bg.jpg);">
+            <div class="d-flex flex-column h-100 justify-content-center bg-size-cover bg-position-center rounded-3" style="background-image: url(img/home/hero-slider/30.png);">
                 <div class="py-4 my-2 px-4 text-center">
                     <div class="py-1">
-                        <h5 class="mb-2">بنر خود را در اینجا اضافه کنید</h5>
-                        <p class="fs-sm text-muted">عجله کنید تا محل خود را رزرو کنید</p><a class="btn btn-primary btn-shadow btn-sm" href="#">تماس با ما</a>
+                        <h5 class="mb-2">قیمت هایی مناسب</h5>
+                        <p class="fs-sm text-muted">کجا؟ کیهان عطر</p><a class="btn btn-primary btn-shadow btn-sm" href="#">تماس با ما</a>
                     </div>
                 </div>
             </div>
