--- a/Keyhanatr/Views/Shared/_FeatureCategory.cshtml
+++ b/Keyhanatr/Views/Shared/_FeatureCategory.cshtml
@@ -11,11 +11,11 @@
                         <button type="button"><i class="ci-arrow-right"></i></button>
                         <button type="button"><i class="ci-arrow-left"></i></button>
                     </div>
-                </div><a class="d-none d-md-block mt-auto" href="shop-grid-ls.html"><img class="d-block w-100" src="img/home/categories/cat-lg04.jpg" alt="For Women"></a>
+                </div><a class="d-none d-md-block mt-auto" href="shop-grid-ls.html"><img class="d-block w-60" src="img/home/hero-slider/beauty2.png" style="height:600px" alt="For Women"></a>
             </div>
         </div>
         <!-- Product grid (carousel)-->
-        <div class="col-md-7 pt-4 pt-md-0">
+        <div class="col-md-7 pt-4 pt-md-4" style="background-color: #FFDEDE; ">
             <div class="tns-carousel ltr">
                 <div class="tns-carousel-inner" data-carousel-options="{&quot;nav&quot;: false, &quot;controlsContainer&quot;: &quot;#hoodie-day&quot;}">
                     <!-- Carousel item-->
