--- a/Keyhanatr/Views/Shared/_PopularCategpries.cshtml
+++ b/Keyhanatr/Views/Shared/_PopularCategpries.cshtml
@@ -1,25 +1,25 @@
 ﻿<section class="container position-relative pt-3 pt-lg-0 pb-5 mt-lg-n10" style="z-index: 10;">
     <div class="row">
-        <div class="col-xl-8 col-lg-9">
-            <div class="card border-0 shadow-lg">
-                <div class="card-body px-3 pt-grid-gutter pb-0">
+        <div class="col-xl-8 col-lg-9"  >
+            <div class="card border-0 shadow-lg" style=" background-color: #FFDEDE" >
+                <div class="card-body px-3 pt-grid-gutter pb-0" >
                     <div class="row g-0 ps-1">
-                        <div class="col-sm-4 px-2 mb-grid-gutter">
+                        <div class="col-sm-4 px-2 mb-grid-gutter" style=" background-color: #FEE3EC">
                             <a class="d-block text-center text-decoration-none me-1" href="shop-grid-ls.html">
-                                <img class="d-block rounded mb-3" src="img/home/categories/cat-sm01.jpg" alt="Men">
-                                <h3 class="fs-base pt-1 mb-0">مرد</h3>
+                                <img class="d-block rounded mb-3" style="height:200px" src="img/home/hero-slider/55.png" alt="Men">
+                                <h3 class="fs-base pt-1 mb-0">پوست</h3>
                             </a>
                         </div>
-                        <div class="col-sm-4 px-2 mb-grid-gutter">
+                        <div class="col-sm-4 px-2 mb-grid-gutter" style=" background-color: #FEE3EC">
                             <a class="d-block text-center text-decoration-none me-1" href="shop-grid-ls.html">
-                                <img class="d-block rounded mb-3" src="img/home/categories/cat-sm02.jpg" alt="Women">
-                                <h3 class="fs-base pt-1 mb-0">زن</h3>
+                                <img class="d-block rounded mb-3" style="height:200px" src="img/home/hero-slider/hair2.png" alt="Women">
+                                <h3 class="fs-base pt-1 mb-0">مو</h3>
                             </a>
                         </div>
-                        <div class="col-sm-4 px-2 mb-grid-gutter">
+                        <div class="col-sm-4 px-2 mb-grid-gutter" style=" background-color: #FEE3EC">
                             <a class="d-block text-center text-decoration-none me-1" href="shop-grid-ls.html">
-                                <img class="d-block rounded mb-3" src="img/home/categories/cat-sm03.jpg" alt="Kids">
-                                <h3 class="fs-base pt-1 mb-0">بچه</h3>
+                                <img class="d-block rounded mb-3" style="height:200px" src="img/home/hero-slider/40.png" alt="Kids">
+                                <h3 class="fs-base pt-1 mb-0">عطر و ادکلن</h3>
                             </a>
                         </div>
 
