--- a/Keyhanatr/Views/Shared/_Products.cshtml
+++ b/Keyhanatr/Views/Shared/_Products.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="container">
-    <section class="container bg-secondary pt-md-3 pb-5 mb-md-3">
+    <section class="container bg-secondary pt-md-3 pb-5 mb-md-3" >
         <h2 class="h3 text-center">محصولات پرطرفدار</h2>
-        <div class="row bg-secondary pt-4 mx-n2">
+        <div class="row  pt-4 mx-n2" style=" background-color: #FFDEDE">
             <!-- Product-->
             <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4">
                 <div class="card product-card">
@@ -176,7 +176,7 @@
     <section class="container bg-secondary pt-md-3 pb-5 mb-md-3">
         <h2 class="h3 text-center">محصولات شگفت انگیز</h2>
 
-        <div class="row  bg-secondary pt-4 mx-n2">
+        <div class="row   pt-4 mx-n2"  style=" background-color: #FFDEDE">
 
             <!-- Product-->
             <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4">
@@ -324,7 +324,7 @@
             <h2 class="h3 mb-0 pt-3 me-3">محصولات با تخفیف</h2>
             <div class="pt-3"><a class="btn btn-outline-accent btn-sm" href="grocery-catalog.html">محصولات بیشتر<i class="ci-arrow-left  ms-1 me-n1"></i></a></div>
         </div>
-        <div class="tns-carousel tns-controls-static tns-controls-outside tns-nav-enabled pt-2 ltr">
+        <div class="tns-carousel tns-controls-static tns-controls-outside tns-nav-enabled pt-2 ltr"  style=" background-color: #FFDEDE">
             <div class="tns-carousel-inner bg-secondary" data-carousel-options="{&quot;items&quot;: 2, &quot;gutter&quot;: 16, &quot;controls&quot;: true, &quot;autoHeight&quot;: true, &quot;responsive&quot;: {&quot;0&quot;:{&quot;items&quot;:1}, &quot;480&quot;:{&quot;items&quot;:2}, &quot;720&quot;:{&quot;items&quot;:3}, &quot;991&quot;:{&quot;items&quot;:2}, &quot;1140&quot;:{&quot;items&quot;:3}, &quot;1300&quot;:{&quot;items&quot;:4}, &quot;1500&quot;:{&quot;items&quot;:5}}}">
                 <!-- Product-->
                 <div>
