--- a/Keyhanatr/Areas/Admin/Views/Sliders/Index.cshtml
+++ b/Keyhanatr/Areas/Admin/Views/Sliders/Index.cshtml
@@ -5,14 +5,14 @@
 }
 <section class="col-lg-12 pt-lg-4 pb-4 mb-3">
     <div class="pt-2 px-1 ps-lg-0 pe-xl-5">
-        <h2 class="h3 py-2 text-center text-sm-start">اسلایدر </h2>
+        <h2 class="h3 py-2 text-center text-sm-start">اسلایدر صفحه اصلی </h2>
         <div>
             <div>
                 <div class="bg-secondary rounded-3 p-4 mb-4">
-                    <p class="fs-sm text-muted mb-0">صفحه مدیریت نمایش تصاویر اسلایدر</p>
+                    <p class="fs-sm text-muted mb-0">صفحه مدیریت و نمایش تصاویر اسلایدر صفحه اصلی</p>
                 </div>
                 <p>
-                    <a asp-action="Create">ثبت اسلاید جدید</a>
+                    <a class="btn btn-success" asp-action="Create">ثبت اسلاید جدید</a>
                 </p>
                 <div class="table-responsive fs-md mb-4">
                     <table class="table table-hover mb-0">
@@ -25,14 +25,20 @@
                                     @Html.DisplayNameFor(model => model.Title)
                                 </th>
                                 <th>
+                                    @Html.DisplayNameFor(model => model.Titr)
+                                </th>
+                                <th>
                                     @Html.DisplayNameFor(model => model.Text)
                                 </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.BackColor)
+                                </th>
                                 @*<th>
-                                        @Html.DisplayNameFor(model => model.StartDate)
-                                    </th>
-                                    <th>
-                                        @Html.DisplayNameFor(model => model.EndDate)
-                                    </th>*@
+            @Html.DisplayNameFor(model => model.StartDate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.EndDate)
+        </th>*@
                                 <th>
                                     @Html.DisplayNameFor(model => model.IsActive)
                                 </th>
@@ -48,7 +54,9 @@
                                              src="/SliderImages/@item.ImageName" />
                                     </td>
                                     <td class="py-3 align-middle">@item.Title</td>
+                                    <td class="py-3 align-middle">@item.Titr</td>
                                     <td class="py-3 align-middle">@item.Text</td>
+                                    <td class="py-3 align-middle">@item.BackColor</td>
                                     @*<td class="py-3 align-middle">@item.StartDate</td>
                                         <td class="py-3 align-middle">@item.EndDate</td>*@
                                     <td class="py-3 align-middle">@item.IsActive</td>
