--- a/Keyhanatr/Views/Home/Index.cshtml
+++ b/Keyhanatr/Views/Home/Index.cshtml
@@ -3,8 +3,6 @@
     ViewData["Title"] = "Home Page";
 }
 
-
-
 @section navbar
 {
     <partial name="_Navbar" />
@@ -12,7 +10,7 @@
 
 @section slider
 {
-    <partial name="_Carousel" />
+    @await Component.InvokeAsync("Slider")
 }
 
 @section popularcategories
