--- a/Keyhanatr/Views/Shared/_Navbar.cshtml
+++ b/Keyhanatr/Views/Shared/_Navbar.cshtml
@@ -20,51 +20,60 @@
             <div class="ms-3 text-nowrap">
                 <a class="topbar-link me-4 d-none d-md-inline-block" href="order-tracking.html"><i class="ci-location"></i>رهیگیری سفارش</a>
                 @*<div class="topbar-text dropdown disable-autohide">
-                    <a class="topbar-link dropdown-toggle" href="#" data-bs-toggle="dropdown"><img class="me-2" src="img/flags/en.png" width="20" alt="English">انگلیسی</a>
-                    <ul class="dropdown-menu dropdown-menu-end">
-                        <li class="dropdown-item">
-                            <select class="form-select form-select-sm">
-                                <option value="usd">دلار</option>
-                                <option value="eur">تومان</option>
-                                <option value="ukp">یورو</option>
-                                <option value="jpy">پوند</option>
-                            </select>
-                        </li>
-                        <li><a class="dropdown-item pb-1" href="#"><img class="me-2" src="img/flags/fr.png" width="20" alt="فرانسه">فرانسه</a></li>
-                        <li><a class="dropdown-item pb-1" href="#"><img class="me-2" src="img/flags/de.png" width="20" alt="آلمان">آلمان</a></li>
-                        <li><a class="dropdown-item" href="#"><img class="me-2" src="img/flags/it.png" width="20" alt="ایتالیا">ایتالیا</a></li>
-                    </ul>
-                </div>*@
+                        <a class="topbar-link dropdown-toggle" href="#" data-bs-toggle="dropdown"><img class="me-2" src="img/flags/en.png" width="20" alt="English">انگلیسی</a>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                            <li class="dropdown-item">
+                                <select class="form-select form-select-sm">
+                                    <option value="usd">دلار</option>
+                                    <option value="eur">تومان</option>
+                                    <option value="ukp">یورو</option>
+                                    <option value="jpy">پوند</option>
+                                </select>
+                            </li>
+                            <li><a class="dropdown-item pb-1" href="#"><img class="me-2" src="img/flags/fr.png" width="20" alt="فرانسه">فرانسه</a></li>
+                            <li><a class="dropdown-item pb-1" href="#"><img class="me-2" src="img/flags/de.png" width="20" alt="آلمان">آلمان</a></li>
+                            <li><a class="dropdown-item" href="#"><img class="me-2" src="img/flags/it.png" width="20" alt="ایتالیا">ایتالیا</a></li>
+                        </ul>
+                    </div>*@
             </div>
         </div>
     </div>
 
     <!--modal login-->
-    
     <!-- Remove "navbar-sticky" class to make navigation bar scrollable with the page.-->
     <div class="navbar-sticky bg-light">
         <div class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <a class="navbar-brand d-none d-sm-block flex-shrink-0" href="index.html"><img src="img/logo-dark.png" width="142" alt="Cartzilla"></a><a class="navbar-brand d-sm-none flex-shrink-0 me-2" href="index.html"><img src="img/logo-icon.png" width="74" alt="Cartzilla"></a>
+                <a class="navbar-brand d-none d-sm-block flex-shrink-0" href="#"><img class="img-thumbnail" src="img/LogoKeyhanAtr.jpeg" width="60" alt="کیهان عطر"></a><a class="navbar-brand d-sm-none flex-shrink-0 me-2" href="#"><img class="img-thumbnail" src="img/LogoKeyhanAtr.jpeg" width="60" alt="کیهان عطر"></a>
                 <div class="input-group d-none d-lg-flex mx-4">
                     <input class="form-control rounded-end pe-5" type="text" placeholder="جستجو برای محصول"><i class="ci-search position-absolute top-50 end-0 translate-middle-y text-muted fs-base me-3"></i>
+                    
                 </div>
                 <div class="navbar-toolbar d-flex flex-shrink-0 align-items-center">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"><span class="navbar-toggler-icon"></span></button><a class="navbar-tool navbar-stuck-toggler" href="#">
                         <span class="navbar-tool-tooltip">منو</span>
                         <div class="navbar-tool-icon-box"><i class="navbar-tool-icon ci-menu"></i></div>
                     </a>
+
+                    @*<a class="navbar-tool ms-1 ms-lg-0 me-n1 me-lg-2" href="#signin-modal" data-bs-toggle="modal">
+                            <div class="navbar-tool-icon-box"><i class="navbar-tool-icon ci-user"></i></div>
+                            <div class="navbar-tool-text ms-n3"><small>سلام وارد شوید</small>حساب من</div>
+                        </a>*@
+
                     @*<a class="navbar-tool d-none d-lg-flex" href="account-wishlist.html">
-                        <span class="navbar-tool-tooltip">علاقه مندی</span>
-                        <div class="navbar-tool-icon-box"><i class="navbar-tool-icon ci-heart"></i></div>
-                    </a>*@
+                            <span class="navbar-tool-tooltip">علاقه مندی</span>
+                            <div class="navbar-tool-icon-box"><i class="navbar-tool-icon ci-heart"></i></div>
+                        </a>*@
+
                     <a class="navbar-tool ms-1 ms-lg-0 me-n1 me-lg-2" href="#" data-bs-toggle="modal">
-                        <div class="navbar-tool-text ms-n3">
-                            <ul class="navbar-nav" >
-                                <partial name="_LoggedIn"/>
+                        @*<div class="navbar-tool-icon-box"><i class="navbar-tool-icon ci-user"></i></div>*@
+                        @*<div class="navbar-tool-text ms-n3">*@
+                            <ul class="navbar-nav">
+                                <partial name="_LoggedIn" />
                             </ul>
-                        </div>
+                        @*</div>*@
                     </a>
+
                     <div class="navbar-tool dropdown ms-3">
                         <a class="navbar-tool-icon-box bg-secondary dropdown-toggle" href="shop-cart.html"><span class="navbar-tool-label">4</span><i class="navbar-tool-icon ci-cart"></i></a><a class="navbar-tool-text" href="shop-cart.html"><small>سبدخرید</small>25600</a>
                         <!-- Cart dropdown-->
@@ -129,7 +138,7 @@
                         <i class="ci-search position-absolute top-50 start-0 translate-middle-y text-muted fs-base ms-3"></i>
                         <input class="form-control rounded-start" type="text" placeholder="جستجو برای محصول">
                     </div>
-                    
+
                     <!-- Departments menu-->
                     <ul class="navbar-nav navbar-mega-nav pe-lg-2 me-lg-2">
                         <li class="nav-item dropdown">
