--- a/Keyhanatr/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Keyhanatr/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -3,11 +3,11 @@
 @inject IProductServices productServices ;
 <!DOCTYPE html>
 @{
-    string role = User.FindFirstValue("RoleId").ToString();
-    if (role != "5")
-    {
-        Context.Response.Redirect("/Login");
-    }
+//string role = User.FindFirstValue("RoleId").ToString();
+//if (role != "5")
+//{
+//    Context.Response.Redirect("/Login");
+//}
 
 }
 <html lang="en">
