--- a/Keyhanatr/Areas/Admin/Views/ProductGroups/Create.cshtml
+++ b/Keyhanatr/Areas/Admin/Views/ProductGroups/Create.cshtml
@@ -20,6 +20,12 @@
                         <div class="form-text">حداکثر 100 حرف هیچ L یا شکلک مجاز نیست.</div>
                         <span asp-validation-for="GroupTitle" class="text-danger"></span>
                     </div>
+                    <div class="form-group">
+                        <label class="form-label" asp-for="GroupTitle"></label>
+                        <input class="form-control" asp-for="GroupTitle" />
+                        <div class="form-text">حداکثر 100 حرف هیچ L یا شکلک مجاز نیست.</div>
+                        <span asp-validation-for="GroupTitle" class="text-danger"></span>
+                    </div>
 
                     <div class="form-group">
                         <button class="btn btn-success d-block w-100" type="submit">  ثبت گروه جدید</button>
