--- a/Keyhanatr/Areas/Admin/Views/ProductGroups/Edit.cshtml
+++ b/Keyhanatr/Areas/Admin/Views/ProductGroups/Edit.cshtml
@@ -8,28 +8,36 @@
 
 <h4>آیتم مورد نظر را ویرایش کنید</h4>
 <hr />
-<div class="row">
-    <div class="col-md-8">
-        <form asp-action="Edit">
-            <input type="hidden" asp-for="ProductGroupId" />
-            <div class="mb-3 pb-2">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <label class="form-label" asp-for="GroupTitle"></label>
-                    <input class="form-control" asp-for="GroupTitle" />
-                    <div class="form-text">حداکثر 100 حرف هیچ L یا شکلک مجاز نیست.</div>
-                    <span asp-validation-for="GroupTitle" class="text-danger"></span>
-                </div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-8">
+            <form asp-action="Edit" method="post">
+                <input type="hidden" asp-for="ProductGroupId" />
+                <input type="hidden" asp-for="ProductNavGroupId" />
+                <div class="mb-3 pb-2">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label for="Product_ProductSubGroupId">گروه ناوبری را انتخاب کنید:</label>
+                        <select id="Product_ProductSubGroupId" asp-for="@Model.ProductNavGroupId" class="form-select me-2" asp-items="@(ViewData["NavGroups"] as SelectList)"></select>
+                        <span asp-validation-for="ProductNavGroupId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label" asp-for="GroupTitle"></label>
+                        <input class="form-control" asp-for="GroupTitle" />
+                        <div class="form-text">حداکثر 100 حرف هیچ L یا شکلک مجاز نیست.</div>
+                        <span asp-validation-for="GroupTitle" class="text-danger"></span>
+                    </div>
 
-                <div class="form-group">
-                    <button class="btn btn-warning d-block w-100" type="submit"> ویرایش گروه</button>
+                    <div class="form-group">
+                        <button class="btn btn-warning d-block w-100" type="submit"> ویرایش گروه</button>
+                    </div>
                 </div>
-            </div>
-        </form>
-    </div>
+            </form>
+        </div>
 
-    <div>
-        <a asp-action="Index">بازگشت به لیست گروه ها</a>
+        <div>
+            <a asp-action="Index">بازگشت به لیست گروه ها</a>
+        </div>
     </div>
 </div>
 
