--- a/Keyhanatr/Areas/Admin/Views/ProductSubGroups/Create.cshtml
+++ b/Keyhanatr/Areas/Admin/Views/ProductSubGroups/Create.cshtml
@@ -12,7 +12,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label for="ProductGroupId" class="control-label">عنوان گروه اصلی را از لیست زیر انتخاب کنید:</label>
-                <select id="ProductGroupId" asp-for="@Model.ProductGroupId" class ="form-control" asp-items="ViewBag.ProductGroupId"></select>
+                <select id="ProductGroupId" asp-for="@Model.ProductGroupId" class="form-select me-2" asp-items="ViewBag.ProductGroupId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="SubGroupTitle" class="control-label"></label>
