--- a/Keyhanatr/Areas/UserPanel/Views/Shared/_UserPanelLayout.cshtml
+++ b/Keyhanatr/Areas/UserPanel/Views/Shared/_UserPanelLayout.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Cartzilla | اطلاعات پروفایل</title>
+    <title> اطلاعات پروفایل</title>
     <partial name="_RefrencesHead" />
 </head>
 <body>
