--- a/Keyhanatr/Views/Shared/_Layout.cshtml
+++ b/Keyhanatr/Views/Shared/_Layout.cshtml
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Cartzilla | فروشگاه مد</title>
-    <!-- SEO Meta Tags-->
-    <meta name="description" content="Cartzilla - Bootstrap تجارت الکترونیکی Template">
-    <meta name="keywords" content="bootstrap, shop, تجارت الکترونیکی, market, modern, responsive,  business, mobile, bootstrap, html5, css3, js, gallery, slider, touch, creative, clean">
-    <meta name="author" content="گروه ستین">
-    <!-- Viewport-->
+    <title>فروشگاه اینترنتی کیهان عطر</title>
+    
+    <meta name="description" content="فروشگاه اینترنتی کیهان عطر">
+    <meta name="keywords" content="bootstrap, shop, فروشگاه اینترنتی کیهان عطر, market, modern, responsive,  business, mobile, bootstrap, html5, css3, js, gallery, slider, touch, creative, clean">
+    <meta name="author" content="">
+     
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Favicon and Touch Icons-->
+    
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -19,91 +19,90 @@
     <link rel="mask-icon" color="#fe6a6a" href="safari-pinned-tab.svg">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
-    <!-- Vendor Styles including: Font Icons, Plugins, etc.-->
+    
     <link rel="stylesheet" media="screen" href="/vendor/simplebar/dist/simplebar.min.css" />
     <link rel="stylesheet" media="screen" href="/vendor/tiny-slider/dist/tiny-slider.css" />
     <link rel="stylesheet" media="screen" href="/vendor/drift-zoom/dist/drift-basic.min.css" />
     <link rel="stylesheet" media="screen" href="/vendor/lightgallery.js/dist/css/lightgallery.min.css" />
     <link media="screen" href="/css/CustomStyles.css" rel="stylesheet" />
-    <!-- Main Theme Styles + Bootstrap-->
+    
     <link rel="stylesheet" media="screen" href="/css/theme.min.css">
-    <!-- Google Tag Manager-->
-
+    
+    @*<partial name="_RefrencesHead" />*@
 </head>
 <!-- Body-->
 <body class="handheld-toolbar-enabled">
     <!-- Google Tag Manager (noscript)-->
     <!-- Sign in / sign up modal-->
-
-    <div class="modal fade" id="signin-modal" tabindex="-1" role="dialog">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header bg-secondary">
-                    <ul class="nav nav-tabs card-header-tabs" role="tablist">
-                        <li class="nav-item"><a class="nav-link fw-medium active" href="#signin-tab" data-bs-toggle="tab" role="tab" aria-selected="true"><i class="ci-unlocked me-2 mt-n1"></i>ورود</a></li>
-                        <li class="nav-item"><a class="nav-link fw-medium" href="#signup-tab" data-bs-toggle="tab" role="tab" aria-selected="false"><i class="ci-user me-2 mt-n1"></i>ثبت نام</a></li>
-                    </ul>
-                    <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body tab-content py-4">
-                    <form class="needs-validation tab-pane fade show active" autocomplete="off" novalidate id="signin-tab">
-                        <div class="mb-3">
-                            <label class="form-label" for="si-email">آدرس ایمیل</label>
-                            <input class="form-control" type="email" id="si-email" placeholder="Setin@gmail.com" required>
-                            <div class="invalid-feedback">لطفا آدر س ایمیل را وارد کنید</div>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label" for="si-password">پسورد</label>
-                            <div class="password-toggle">
-                                <input class="form-control" type="password" id="si-password" required>
-                                <label class="password-toggle-btn" aria-label="نمایش/پنهان کردن">
-                                    <input class="password-toggle-check" type="checkbox"><span class="password-toggle-indicator"></span>
-                                </label>
+    @*<div class="modal fade" id="signin-modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header bg-secondary">
+                        <ul class="nav nav-tabs card-header-tabs" role="tablist">
+                            <li class="nav-item"><a class="nav-link fw-medium active" href="#signin-tab" data-bs-toggle="tab" role="tab" aria-selected="true"><i class="ci-unlocked me-2 mt-n1"></i>ورود</a></li>
+                            <li class="nav-item"><a class="nav-link fw-medium" href="#signup-tab" data-bs-toggle="tab" role="tab" aria-selected="false"><i class="ci-user me-2 mt-n1"></i>ثبت نام</a></li>
+                        </ul>
+                        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body tab-content py-4">
+                        <form class="needs-validation tab-pane fade show active" autocomplete="off" novalidate id="signin-tab">
+                            <div class="mb-3">
+                                <label class="form-label" for="si-email">آدرس ایمیل</label>
+                                <input class="form-control" type="email" id="si-email" placeholder="Setin@gmail.com" required>
+                                <div class="invalid-feedback">لطفا آدر س ایمیل را وارد کنید</div>
                             </div>
-                        </div>
-                        <div class="mb-3 d-flex flex-wrap justify-content-between">
-                            <div class="form-check mb-2">
-                                <input class="form-check-input" type="checkbox" id="si-remember">
-                                <label class="form-check-label" for="si-remember">مرا به خاطر بسپار</label>
-                            </div><a class="fs-sm" href="#">فراموشی رمز؟</a>
-                        </div>
-                        <button class="btn btn-primary btn-shadow d-block w-100" type="submit">ورود</button>
-                    </form>
-                    <form class="needs-validation tab-pane fade" autocomplete="off" novalidate id="signup-tab">
-                        <div class="mb-3">
-                            <label class="form-label" for="su-name">نام</label>
-                            <input class="form-control" type="text" id="su-name" placeholder="ستین" required>
-                            <div class="invalid-feedback">لطفا نام را وارد کنید</div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="su-email">آدرس ایمیل</label>
-                            <input class="form-control" type="email" id="su-email" placeholder="Setin@gmail.com" required>
-                            <div class="invalid-feedback">لطفا آدر س ایمیل را وارد کنید</div>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label" for="su-password">پسورد</label>
-                            <div class="password-toggle">
-                                <input class="form-control" type="password" id="su-password" required>
-                                <label class="password-toggle-btn" aria-label="نمایش/پنهان کردن">
-                                    <input class="password-toggle-check" type="checkbox"><span class="password-toggle-indicator"></span>
-                                </label>
+                            <div class="mb-3">
+                                <label class="form-label" for="si-password">پسورد</label>
+                                <div class="password-toggle">
+                                    <input class="form-control" type="password" id="si-password" required>
+                                    <label class="password-toggle-btn" aria-label="نمایش/پنهان کردن">
+                                        <input class="password-toggle-check" type="checkbox"><span class="password-toggle-indicator"></span>
+                                    </label>
+                                </div>
                             </div>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label" for="su-password-confirm">تکرار پسورد</label>
-                            <div class="password-toggle">
-                                <input class="form-control" type="password" id="su-password-confirm" required>
-                                <label class="password-toggle-btn" aria-label="نمایش/پنهان کردن">
-                                    <input class="password-toggle-check" type="checkbox"><span class="password-toggle-indicator"></span>
-                                </label>
+                            <div class="mb-3 d-flex flex-wrap justify-content-between">
+                                <div class="form-check mb-2">
+                                    <input class="form-check-input" type="checkbox" id="si-remember">
+                                    <label class="form-check-label" for="si-remember">مرا به خاطر بسپار</label>
+                                </div><a class="fs-sm" href="#">فراموشی رمز؟</a>
                             </div>
-                        </div>
-                        <button class="btn btn-primary btn-shadow d-block w-100" type="submit">ثبت نام</button>
-                    </form>
+                            <button class="btn btn-primary btn-shadow d-block w-100" type="submit">ورود</button>
+                        </form>
+                        <form class="needs-validation tab-pane fade" autocomplete="off" novalidate id="signup-tab">
+                            <div class="mb-3">
+                                <label class="form-label" for="su-name">نام</label>
+                                <input class="form-control" type="text" id="su-name" placeholder="ستین" required>
+                                <div class="invalid-feedback">لطفا نام را وارد کنید</div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="su-email">آدرس ایمیل</label>
+                                <input class="form-control" type="email" id="su-email" placeholder="Setin@gmail.com" required>
+                                <div class="invalid-feedback">لطفا آدر س ایمیل را وارد کنید</div>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label" for="su-password">پسورد</label>
+                                <div class="password-toggle">
+                                    <input class="form-control" type="password" id="su-password" required>
+                                    <label class="password-toggle-btn" aria-label="نمایش/پنهان کردن">
+                                        <input class="password-toggle-check" type="checkbox"><span class="password-toggle-indicator"></span>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label" for="su-password-confirm">تکرار پسورد</label>
+                                <div class="password-toggle">
+                                    <input class="form-control" type="password" id="su-password-confirm" required>
+                                    <label class="password-toggle-btn" aria-label="نمایش/پنهان کردن">
+                                        <input class="password-toggle-check" type="checkbox"><span class="password-toggle-indicator"></span>
+                                    </label>
+                                </div>
+                            </div>
+                            <button class="btn btn-primary btn-shadow d-block w-100" type="submit">ثبت نام</button>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
+        </div>*@
     <!-- مشاهده Modal-->
     <div class="modal-quick-view modal fade" id="quick-view" tabindex="-1">
         <div class="modal-dialog modal-xl">
@@ -215,10 +214,11 @@
         </div>
     </div>
     <!-- Navbar 3 Level (Light)-->
+    @*<partial name="_Navbar" />*@
     @RenderSection("navbar", false)
     <!-- Hero slider-->
     @RenderSection("slider", false)
-
+    @RenderBody()
     <!-- Popular categories-->
     @RenderSection("popularcategories", false)
     <!-- Products grid (محصولات پرطرفدار)-->
@@ -246,7 +246,7 @@
     </div>
     <!-- Back To Top Button--><a class="btn-scroll-top" href="#top" data-scroll><span class="btn-scroll-top-tooltip text-muted fs-sm me-2">بالا</span><i class="btn-scroll-top-icon ci-arrow-up">   </i></a>
     <!-- Vendor scrits: js libraries and plugins-->
-    <script src="/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!--<script src="/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/vendor/simplebar/dist/simplebar.min.js"></script>
     <script src="/vendor/tiny-slider/dist/min/tiny-slider.js"></script>
     <script src="/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
@@ -256,14 +256,16 @@
     <script src="/js/jquery.min.js"></script>
     <script src="/js/jquery.unobtrusive-ajax.min.js"></script>
     <script src="/js/jquery.validate.min.js"></script>
-    <script src="/js/jquery.validate.unobtrusive.js"></script>
-
+    <script src="/js/jquery.validate.unobtrusive.js"></script>-->
     <!-- Main theme script-->
-    <script src="/js/theme.min.js"></script>
+    <!--<script src="/js/theme.min.js"></script>-->
+    <partial name="RefrenceJs" />
+
+    @RenderSection("Scripts", false)
 </body>
 </html>
+
+
+
 @*@await RenderSectionAsync("Scripts", required: false)*@
 
-@await RenderSectionAsync("Scripts", required: false)
-@RenderBody()
-<title>@ViewData["Title"] - Keyhanatr</title><title>@ViewData["Title"] - Keyhanatr</title>
